--- a/Calculator/Calculator/App.config
+++ b/Calculator/Calculator/App.config
@@ -1,4 +1,4 @@
-<<<<<<< HEAD
+<!--<<<<<<< HEAD-->
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <configuration>
   <configSections>
@@ -18,11 +18,10 @@
       <provider invariantName="System.Data.SqlClient" type="System.Data.Entity.SqlServer.SqlProviderServices, EntityFramework.SqlServer" />
     </providers>
   </entityFramework>
-=======
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <configuration>
     <startup> 
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5" />
     </startup>
->>>>>>> 7481e5f34c39fdf1c49e39b833257775c43ee000
+<!-->>>>>>> 7481e5f34c39fdf1c49e39b833257775c43ee000-->
 </configuration>
